# vjo

./: .gitignore  PLAN.MD  PLAN.md  VJO.lean  lake-manifest.json  lakefile.toml  pyproject.toml
VJO/: BlockList.lean  Coverage.lean  Defs.lean  OptimalSearch.lean  SafetyRadius.lean  Soundness.lean  Submodular.lean
data/: agentharm_harmful.csv  jbb_harmful.csv
src/experiments/: exp1_full.py  exp1_low_dim.py  exp1_profile.py  exp1_smoke.py  exp2_local_dim.py  exp3_prob_cert.py  exp4_model_compare.py  exp4_multi_prompt.py  exp5_esd.py  exp6_attack_esd.py  exp7_many_restart.py  exp8_clip_attack.py  run.py
src/experiments/results/: benchmark.json  benchmark_llamaguard.json  completeness.json  full_vocab.json  quick.json
src/vjo/: backend.py  config.py  search.py
todos/: pre-experiment.txt
