[project]
name = "vjo"
version = "0.1.0"
description = "VJO: Certified Safety Evaluation for LLMs"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.73.0",
    "vllm>=0.6.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vjo"]
