[project]
name = "vjo"
version = "0.1.0"
description = "DJ Oracle: Dual-Judge Safety Certification for Generative Models"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.73.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vjo"]
